Removed unnecessary new Java syntax
This line breaks Java 17 compatibility, so I fixed it.